[package]
name = "rustlings"
version = "5.0.0"
authors = ["Liv <mokou@fastmail.com>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1"
indicatif = "0.17"
console = "0.15"
notify = "6.0"
toml = "0.7"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.121"
home = "0.5.5"
glob = "0.3.1"

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
glob = "0.3.1"
